@@ -1,5 +1,8 @@
+20070228
+	make array bounds checking the default for on-the-fly compilers (emu/port/main.c)
 20070227
 	/include/fcall.h: ensure unsigned promotion to counter ansi sign-extending rules for GBIT64
+	/libmemdraw/draw.c: copy fix to memfillcolor
 20070220
 	add 0x92 as chip ID for ether91c111.c
 20070217
